18_reverse_str/grade.txt
Grading at Mon Jul 27 04:29:15 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:10:7: error: expected expression before ‘}’ token
       }
       ^
reverse.c:10:7: error: ‘return’ with a value, in function returning void [-Werror]
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
